[gd_scene load_steps=3 format=3 uid="uid://cmi1nn7shm5lh"]

[ext_resource type="Theme" uid="uid://gl5sre36a7ms" path="res://resources/main_theme.tres" id="1_70svj"]
[ext_resource type="Script" path="res://scripts/lose_screen.gd" id="1_tocj6"]

[node name="lose_screen" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_tocj6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(204, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiedLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_70svj")
theme_override_font_sizes/font_size = 32
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("1_70svj")
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("1_70svj")
text = "MAIN MENU"

[connection signal="button_down" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_button_down"]
[connection signal="button_down" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
